src/css/Videos.css
.frame {
  width: 65rem;
  margin: 2rem auto 10rem auto;
  min-height: 37rem;
  border: solid 1px black;
  border-top-left-radius: 0.75rem;
  border-top-right-radius: 0.75rem;
  padding: 1.5rem;
  background-color: var(--bg-dark);
  display: flex;
  position: relative;
}

.frame.vert {
  transform: rotate(-90deg);
  width: 43.5rem;
  min-height: 25.875rem;
  margin-top: 9rem;
  margin-right: 5.5rem;
}

.paper-border {
  flex: 1;
  box-shadow: 0 0 1rem var(--shadow);
  position: relative;
}

.paper-border::before {
  content: "";
  position: absolute;
  top: -0.4rem;
  left: 0;
  bottom: -0.4rem;
  width: 1.125rem;
  background-color: black;
  z-index: 2;
}

.paper-border::after {
  content: "";
  position: absolute;
  top: -0.4rem;
  right: 0;
  bottom: -0.4rem;
  width: 1.125rem;
  background-color: black;
  z-index: 2;
}

.paper {
  background-color: var(--bg);
  width: 100%;
  height: 100%;
  position: relative;
  border-left: 0.4rem solid black;
  border-right: 0.4rem solid black;
  z-index: 3;
  padding: 0 1rem;
  overflow: hidden;
}

.blur-overlay {
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0.25rem;
  right: 0.25rem;
  z-index: 4;
  background-image: repeating-linear-gradient(
      0deg,
      rgb(203, 196, 196) 0px,
      rgb(203, 196, 196) 1px,
      transparent 1px,
      transparent 2px
    ),
    repeating-linear-gradient(
      90deg,
      rgb(203, 196, 196) 0px,
      rgb(203, 196, 196) 1px,
      transparent 1px,
      transparent 2px
    );
  mix-blend-mode: multiply;
  backdrop-filter: blur(30px) brightness(0.5) saturate(0.3);
}

.paper::after {
  content: "";
  position: absolute;
  top: 0;
  right: 0;
  width: 0.75rem;
  height: 100%;
  background: linear-gradient(to left, rgba(0, 0, 0, 0.4), transparent);
  filter: blur(4px);
  pointer-events: none;
  z-index: 2;
}

.paper::before {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  width: 0.75rem;
  height: 100%;
  background: linear-gradient(to right, rgba(0, 0, 0, 0.4), transparent);
  filter: blur(4px);
  pointer-events: none;
  z-index: 2;
}

.button-bar {
  position: absolute;
  width: calc(100% + 1.25rem);
  height: 7.5rem;
  background-color: var(--bg);
  bottom: -7.5rem;
  left: -0.75rem;
  border: 1px solid black;
  border-top-left-radius: 0.75rem;
  border-top-right-radius: 0.75rem;
}

.button-bar-frame {
  height: 100%;
  width: 100%;
  position: relative;
}

.light-button {
  background-color: transparent;
  border: none;
  position: absolute;
  width: 3.25rem;
  top: -0.5rem;
  right: 0;
  cursor: pointer;
  transform-origin: 60% 50%;
  transform: rotate(-90deg);
  transition: transform 0.1s;
}

.light-button:active,
.light-button.active {
  transform: rotate(0);
}

.light-button img {
  width: 100%;
  height: 100%;
  color: black;
}

.light-overlay {
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0.25rem;
  right: 0.25rem;
  background-color: white;
  opacity: 0.2;
  z-index: 5;
}

.light-shadow-overlay {
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0.25rem;
  right: 0.25rem;
  box-shadow: 0 1.5rem 8rem -1rem rgba(255, 255, 255, 0.5);
  z-index: 5;
}

.buttons-attachment {
  background-color: var(--bg-dark);
  position: absolute;
  left: 3.75rem;
  top: 1.75rem;
  bottom: 0;
  width: 20rem;
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  gap: 0.75rem;
  padding: 0.5rem;
  z-index: 1;
}

.button-labels {
  display: flex;
  flex-wrap: wrap;
  padding: 0.5rem;
  padding-top: 0;
  position: absolute;
  left: 3.75rem;
  width: 20rem;
  bottom: -1rem;
  z-index: 2;
  font-size: 0.75rem;
}

.play-label,
.prev-label,
.next-label {
  margin-left: 0.75rem;
  margin-right: 1.75rem;
}

.vol-down-label {
  margin-right: 1.25rem;
}

.buttons-attachment::before {
  content: "";
  position: absolute;
  background-color: black;
  top: 0;
  bottom: 1.125rem;
  left: 0;
  width: 20rem;
  z-index: 0;
  border: none;
}

.buttons-attachment > button {
  flex: 1;
  background-color: var(--secondary);
  height: 4.5rem;
  border: 1px solid black;
  z-index: 1;
  color: var(--text-light);
  border-bottom-left-radius: 0.25rem;
  border-bottom-right-radius: 0.25rem;
  box-shadow: 0 3px 8px rgba(0, 0, 0, 0.8);
  cursor: pointer;
  position: relative;
  transition: transform 0.15s, box-shadow 0.15s;
}

.buttons-attachment > button:active {
  transform: translateY(3px);
  box-shadow: 0 0px 8px rgba(0, 0, 0, 0.8);
}

.buttons-attachment > button:nth-child(1) {
  background-color: var(--primary);
}

.buttons-attachment > button:nth-child(2) img {
  transform: scaleX(-1) scaleY(-1);
}

.frame.vert .buttons-attachment > button img,
.frame.vert .buttons-attachment > button svg {
  transform: rotate(90deg);
}

.frame.vert .buttons-attachment > button:nth-child(2) img {
  transform: scaleX(-1) scaleY(-1) rotate(90deg);
}

.buttons-attachment > button:nth-child(1) svg {
  height: 37.5%;
  width: 32.5%;
}

.buttons-attachment > button img,
.buttons-attachment > button svg {
  width: 30%;
  height: 25%;
}

.frame-bottom {
  position: absolute;
  bottom: -1rem;
  height: 1rem;
  width: 92.5%;
  left: 3.75%;
  background-color: var(--bg-dark);
  border: solid 1px black;
  border-top: none;
  z-index: 0;
}

.frame-bottom-left {
  position: absolute;
  bottom: -1rem;
  height: 1rem;
  width: 2.5%;
  left: 1.25%;
  background-color: var(--bg);
  border: solid 1px black;
  border-right: none;
  border-bottom-left-radius: 1rem;
  z-index: 0;
}

.frame-bottom-right {
  position: absolute;
  bottom: -1rem;
  height: 1rem;
  width: 2.5%;
  right: 1.25%;
  background-color: var(--bg);
  border: solid 1px black;
  border-left: none;
  border-bottom-right-radius: 1rem;
  z-index: 0;
}

.view-switch {
  margin: 0 auto 5rem auto;
  background-color: var(--bg);
  padding: 0.5rem;
  display: flex;
  justify-content: center;
  border: none;
  border-radius: 5rem;
  gap: 0.25rem;
}

.view-switch > button {
  background-color: transparent;
  border: none;
  padding: 1rem 1.25rem;
  border-radius: 5rem;
  cursor: pointer;
}

.view-switch > button.active {
  background-color: var(--bg-light);
}

@media (max-width: 560px) {
  .frame.vert {
    width: 61.5rem;
    min-height: 36rem;
    margin-bottom: 15rem;
  }
}

